feat: added D195 model to pos simulation option

--- a/packages/pos/simulator/view/pos/Card.html
+++ b/packages/pos/simulator/view/pos/Card.html
@@ -157,6 +157,11 @@
       left: 75px;
     }
 
+    &.D195 {
+      top: 850px;
+      left: 130px;
+    }
+
     &:not(:hover):not(.is-inserted) {
       filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.5));
     }
