--- a/packages/pos/simulator/view/pos/POS.html
+++ b/packages/pos/simulator/view/pos/POS.html
@@ -54,9 +54,16 @@
 
     .MP35P,
     .shadow-MP35P {
-      width: 425px;
+      width: 508px;
       height: 815px;
       background-image: url(./assets/MP35P.png);
+    }
+
+    .D195,
+    .shadow-D195 {
+      width: 496px;
+      height: 880px;
+      background-image: url(./assets/D195.png);
     }
 
     .pos {
