--- a/packages/pos/simulator/view/pos/Wrapper.html
+++ b/packages/pos/simulator/view/pos/Wrapper.html
@@ -94,6 +94,12 @@
       align-items: initial;
       padding-top: 32px;
     }
+
+    .container.D195 {
+      height: 1000px;
+      align-items: initial;
+      padding-top: 32px;
+    }
   }
 
   .engine-alert {
