--- a/packages/pos/simulator/view/pos/hardware/Keypad/index.html
+++ b/packages/pos/simulator/view/pos/hardware/Keypad/index.html
@@ -9,6 +9,7 @@ import store from '../../store.js';
 
   import MP35P from './MP35P.html';
   import S920 from './S920.html';
+  import D195 from './D195.html';
 
   export default {
     store: () => store,
@@ -23,6 +24,10 @@ import store from '../../store.js';
           {
             title: MODELS.MP35P,
             component: MP35P,
+          },
+          {
+            title: MODELS.D195,
+            component: D195,
           },
         ],
       };
