--- a/packages/pos/simulator/view/pos/hardware/Screen.html
+++ b/packages/pos/simulator/view/pos/hardware/Screen.html
@@ -113,6 +113,14 @@
       height: 240px;
     }
 
+    :global(.D195 .screen) {
+      top: 202px;
+      left: 87px;
+      border-radius: 2px;
+      width: 320px;
+      height: 240px;
+    }
+
     .content {
       height: 100%;
       flex: 0 1 auto;
