style: 💄 better scrolling after validation on Input

--- a/packages/components/Input/Input.html
+++ b/packages/components/Input/Input.html
@@ -135,7 +135,10 @@
         current._errorMsg &&
         current.validateOn === 'input'
       ) {
-        this.refs.input.scrollIntoView(false);
+        this.refs.input.scrollIntoView({
+          block: 'center',
+          inline: 'center',
+        });
       }
 
       if (
