--- a/packages/components/Flatlist/FlatList.html
+++ b/packages/components/Flatlist/FlatList.html
@@ -35,12 +35,13 @@
       {/if}
     {/each}
   </div>
-  <Keystroke key="enter" on:keystroke="selectRowItems(13)"/>
-  <Keystroke key="keyup" on:keystroke="selectRowItems(38)"/>
-  <Keystroke key="keydown" on:keystroke="selectRowItems(40)"/>
+  <Keystroke key="enter" on:keystroke="selectRowItems(ENTER)"/>
+  <Keystroke key="keyup" on:keystroke="selectRowItems(KEYUP)"/>
+  <Keystroke key="keydown" on:keystroke="selectRowItems(KEYDOWN)"/>
 {/if}
 
 <script>
+  import { ENTER, KEYUP, KEYDOWN } from '@mamba/pos/drivers/keyboard/keymap.js';
   import { selectRowItem, toggleActive, getStyles } from './helpers.js';
   import { ACTIVE_MODEL } from './decorators.js';
   import { KEY_ACTION, ARROW_CAPABILITIES_MODELS } from './const.js';
@@ -58,6 +59,9 @@
       Keystroke: '@mamba/app/Keystroke.html',
     },
     helpers: {
+      ENTER,
+      KEYUP,
+      KEYDOWN,
       _setDecorator(decorator, item, decoratorOptions) {
         const isFunc = typeof decorator === 'function';
         return isFunc ? decorator(item, decoratorOptions) : decorator;
@@ -221,15 +225,15 @@
         } = this.get();
         if(!_isKeystrokeActive) return;
 
-        if(keyCode === 13 && disableEnterKeystroke === false) {
+        if(keyCode === ENTER && disableEnterKeystroke === false) {
           this.setSelected(undefined, true);
           return;
         }
 
-        if(keyCode === 38 || keyCode === 40) {
+        if(keyCode === KEYUP || keyCode === KEYDOWN) {
           const { scrollY, selectedIndex, _elementsRefs } = this.get();
 
-          const keyAction = keyCode === 38 ? KEY_ACTION.UP : KEY_ACTION.DOWN;
+          const keyAction = keyCode === KEYUP ? KEY_ACTION.UP : KEY_ACTION.DOWN;
 
           const internalIndex = selectRowItem(
             _elementsRefs,
