--- a/packages/components/Printable/Printable.html
+++ b/packages/components/Printable/Printable.html
@@ -44,6 +44,7 @@
     title="IMPRESSORA SEM PAPEL"
     on:positive="print()"
     on:negative="fire('finish', false)"
+    on:close
     fullscreen
   >
     Tentar imprimir novamente?
