refactor: 💡 allow html content for descriptions

--- a/packages/components/Flatlist/DefaultRow.html
+++ b/packages/components/Flatlist/DefaultRow.html
@@ -36,7 +36,7 @@
       <!-- Label Description  -->
       {#if _label.description}
         <div class="mb-desc">
-          {_label.description}
+          {@html _label.description}
         </div>
       {/if}
 
