--- a/packages/components/Flatlist/DefaultRow.html
+++ b/packages/components/Flatlist/DefaultRow.html
@@ -74,7 +74,7 @@
         <!-- Right Description -->
         {#if rightLabel.description}
           <div class="mb-desc">
-            {rightLabel.description}
+            {@html rightLabel.description}
           </div>
         {/if}
 
