--- a/packages/components/Flatlist/DefaultRow.html
+++ b/packages/components/Flatlist/DefaultRow.html
@@ -182,7 +182,8 @@
 
     &-desc {
       margin-top: 8px;
-      font-size: 13px;
+      font-size: 12px;
+      line-height: 14px;
       color: $neutral500;
     }
   }
