refactor: 💡 Update maxlength filter and S920 css

--- a/packages/components/Input/NumericKeyboard.html
+++ b/packages/components/Input/NumericKeyboard.html
@@ -48,11 +48,8 @@
     data() {
       return {
         isFocused: false,
-        maxlength: 99,
+        maxlength: 5,
       };
-    },
-    onupdate({ changed, current }) {
-      this._limitCharacters(changed, current);
     },
     methods: {
       _forceFocus() {
@@ -60,20 +57,10 @@
 
         inputNumeric.focus();
       },
-      _limitCharacters(changed, current) {
-        const { maxlength } = this.get();
-
-        if (!current.value) return;
-
-        if (current.value.length > maxlength) {
-          this.set({
-            // dynamically substitutes last character
-            value: current.value.slice(-maxlength),
-          });
-        }
-      },
       insertKey(event, key) {
-        const { value } = this.get();
+        const { value, maxlength } = this.get();
+
+        if (value.length >= maxlength) return;
 
         this.set({
           value: value + key,
@@ -182,17 +169,20 @@
 
   :global(.S920) {
     .keyboard {
-      bottom: 20px;
+      bottom: 30px;
+      position: absolute;
+      background-color: $gray100;
+      border-top: 1px solid $gray500;
 
       .icon {
         max-width: 20px;
       }
 
       .key {
-        width: 30px;
+        width: 77px;
+        height: 40px;
         font-size: 20px;
-        height: auto;
-        border: 1px solid red;
+        border: 0;
       }
     }
   }
