fix: 🐛 label description overlaps

--- a/packages/components/Flatlist/DefaultRow.html
+++ b/packages/components/Flatlist/DefaultRow.html
@@ -182,6 +182,10 @@
       line-height: 1;
     }
 
+    &-row-label {
+      flex: 1;
+    }
+
     &-row-main {
       flex: 1;
       padding-left: 15px;
@@ -204,6 +208,7 @@
       font-size: 12px;
       line-height: 14px;
       color: $neutral500;
+      max-width: 90%;
     }
   }
 
